// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`x-fern-global-headers x-fern-global-headers docs 1`] = `
{
  "definitionFiles": {
    "user.yml": {
      "imports": {
        "root": "__package__.yml",
      },
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "get": {
            "auth": false,
            "docs": undefined,
            "examples": [
              {
                "headers": {
                  "x-api-key": "x-api-key",
                },
                "path-parameters": {
                  "userId": "userId",
                },
                "request": {
                  "stream": false,
                },
                "response": {
                  "body": {
                    "id": "id",
                    "streamed": false,
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/user/{userId}",
            "path-parameters": {
              "userId": "string",
            },
            "request": {
              "body": {
                "properties": {
                  "stream": {
                    "audiences": [
                      "public",
                    ],
                    "docs": undefined,
                    "type": "literal<false>",
                  },
                },
              },
              "headers": {
                "x-api-key": {
                  "name": "apiKey",
                  "type": "string",
                },
              },
              "name": "UserGetRequest",
              "query-parameters": undefined,
            },
            "response": {
              "docs": "",
              "type": "root.User",
            },
          },
          "get_stream": {
            "auth": false,
            "docs": undefined,
            "method": "GET",
            "pagination": undefined,
            "path": "/user/{userId}",
            "path-parameters": {
              "userId": "string",
            },
            "request": {
              "body": {
                "properties": {
                  "stream": {
                    "audiences": [
                      "public",
                    ],
                    "docs": undefined,
                    "type": "literal<true>",
                  },
                },
              },
              "headers": {
                "x-api-key": {
                  "name": "apiKey",
                  "type": "string",
                },
              },
              "name": "UserGetStreamRequest",
              "query-parameters": undefined,
            },
            "response-stream": {
              "docs": "",
              "format": "json",
              "type": "root.StreamUser",
            },
          },
        },
      },
    },
  },
  "packageMarkerFile": {
    "types": {
      "StreamUser": {
        "docs": undefined,
        "properties": {
          "id": {
            "type": "optional<string>",
            "validation": {
              "format": "uuid",
              "maxLength": undefined,
              "minLength": undefined,
              "pattern": undefined,
            },
          },
          "streamed": "optional<literal<true>>",
        },
      },
      "User": {
        "docs": undefined,
        "properties": {
          "id": {
            "type": "optional<string>",
            "validation": {
              "format": "uuid",
              "maxLength": undefined,
              "minLength": undefined,
              "pattern": undefined,
            },
          },
          "streamed": "optional<literal<false>>",
        },
      },
    },
  },
  "rootApiFile": {
    "display-name": "Test extension \`x-fern-audiences\` alongside \`x-fern-streaming\`.",
    "error-discrimination": {
      "strategy": "status-code",
    },
    "headers": {
      "another_header": {
        "env": "MY_HEADER_ENV",
        "name": undefined,
        "type": "optional<string>",
      },
      "my-api-key": {
        "env": undefined,
        "name": "api-key-alias",
        "type": "optional<string>",
      },
      "version": {
        "env": "SQUARE_VERSION",
        "name": "Square-Version",
        "type": "literal<"2024-06-04">",
      },
    },
    "name": "api",
    "version": {
      "default": "1.0",
      "header": "my-api-version",
      "values": [
        "1.0",
        "latest",
      ],
    },
  },
}
`;

exports[`x-fern-global-headers x-fern-global-headers simple 1`] = `
{
  "definitionFiles": {
    "user.yml": {
      "imports": {
        "root": "__package__.yml",
      },
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "get": {
            "auth": false,
            "docs": undefined,
            "examples": [
              {
                "headers": {},
                "path-parameters": {
                  "userId": "userId",
                },
                "request": {
                  "stream": false,
                },
                "response": {
                  "body": {
                    "id": "id",
                    "streamed": false,
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/user/{userId}",
            "path-parameters": {
              "userId": "string",
            },
            "request": {
              "body": {
                "properties": {
                  "stream": {
                    "audiences": [
                      "public",
                    ],
                    "docs": undefined,
                    "type": "literal<false>",
                  },
                },
              },
              "headers": undefined,
              "name": "UserGetRequest",
              "query-parameters": undefined,
            },
            "response": {
              "docs": "",
              "type": "root.User",
            },
          },
          "get_stream": {
            "auth": false,
            "docs": undefined,
            "method": "GET",
            "pagination": undefined,
            "path": "/user/{userId}",
            "path-parameters": {
              "userId": "string",
            },
            "request": {
              "body": {
                "properties": {
                  "stream": {
                    "audiences": [
                      "public",
                    ],
                    "docs": undefined,
                    "type": "literal<true>",
                  },
                },
              },
              "headers": undefined,
              "name": "UserGetStreamRequest",
              "query-parameters": undefined,
            },
            "response-stream": {
              "docs": "",
              "format": "json",
              "type": "root.StreamUser",
            },
          },
        },
      },
    },
  },
  "packageMarkerFile": {
    "types": {
      "StreamUser": {
        "docs": undefined,
        "properties": {
          "id": {
            "type": "optional<string>",
            "validation": {
              "format": "uuid",
              "maxLength": undefined,
              "minLength": undefined,
              "pattern": undefined,
            },
          },
          "streamed": "optional<literal<true>>",
        },
      },
      "User": {
        "docs": undefined,
        "properties": {
          "id": {
            "type": "optional<string>",
            "validation": {
              "format": "uuid",
              "maxLength": undefined,
              "minLength": undefined,
              "pattern": undefined,
            },
          },
          "streamed": "optional<literal<false>>",
        },
      },
    },
  },
  "rootApiFile": {
    "display-name": "Test extension \`x-fern-audiences\` alongside \`x-fern-streaming\`.",
    "error-discrimination": {
      "strategy": "status-code",
    },
    "headers": {
      "another_header": {
        "env": "MY_HEADER_ENV",
        "name": undefined,
        "type": "optional<string>",
      },
      "my-api-key": {
        "env": undefined,
        "name": "api-key-alias",
        "type": "optional<string>",
      },
      "version": {
        "env": "SQUARE_VERSION",
        "name": "Square-Version",
        "type": "literal<"2024-06-04">",
      },
      "x-api-key": {
        "name": "apiKey",
        "type": "string",
      },
    },
    "name": "api",
    "version": {
      "default": "1.0",
      "header": "my-api-version",
      "values": [
        "1.0",
        "latest",
      ],
    },
  },
}
`;
